@@ -55,7 +55,7 @@ function [con, bnd] = tri_ccqp_smacof_nofold_sph_pip(tri, R, vmin, vmax, isFree,
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2014 University of Oxford
-% Version: 0.2.0
+% Version: 0.2.1
 % $Rev$
 % $Date$
 %
@@ -228,25 +228,29 @@ for I = idxtricon
             
             % constraint with lower bound. Example:
             % c1: -2 x1 +3.23 x4 +1 x2 * x3 >= -1
-            con{count} = sprintf( ...
-                ' c%d: %.15g x%d + %.15g y%d + %.15g z%d >= %.15g', ...
-                count-1, ...
-                (-yj*zi+yi*zj)/6, k, ...
-                 (xj*zi-xi*zj)/6, k, ...
-                (-xj*yi+xi*yj)/6, k, ...
-                vmin + feastol);
-            count = count + 1;
+            if (vmin > -inf)
+                con{count} = sprintf( ...
+                    ' c%d: %.15g x%d + %.15g y%d + %.15g z%d >= %.15g', ...
+                    count-1, ...
+                    (-yj*zi+yi*zj)/6, k, ...
+                    (xj*zi-xi*zj)/6, k, ...
+                    (-xj*yi+xi*yj)/6, k, ...
+                    vmin + feastol);
+                count = count + 1;
+            end
             
             % constraint with upper bound. Example:
             % c1: -2 x1 +3.23 x4 +1 x2 * x3 <= 2
-            con{count} = sprintf( ...
-                ' c%d: %.15g x%d + %.15g y%d + %.15g z%d <= %.15g', ...
-                count-1, ...
-                (-yj*zi+yi*zj)/6, k, ...
-                 (xj*zi-xi*zj)/6, k, ...
-                (-xj*yi+xi*yj)/6, k, ...
-                vmax - feastol);
-            count = count + 1;
+            if (vmax < inf)
+                con{count} = sprintf( ...
+                    ' c%d: %.15g x%d + %.15g y%d + %.15g z%d <= %.15g', ...
+                    count-1, ...
+                    (-yj*zi+yi*zj)/6, k, ...
+                    (xj*zi-xi*zj)/6, k, ...
+                    (-xj*yi+xi*yj)/6, k, ...
+                    vmax - feastol);
+                count = count + 1;
+            end
             
         case 2 % 2 free vertices, 1 fixed vertex
             
@@ -273,30 +277,34 @@ for I = idxtricon
             k = triloc(3);   % index of free vertex in the mesh
 
             % constraint with lower bound
-            con{count} = sprintf( ...
-                ' c%d: %.15g x%d y%d + %.15g x%d y%d + %.15g x%d z%d + %.15g y%d z%d + %.15g x%d z%d + %.15g y%d z%d >= %.15g', ...
-                count-1, ...
-                -zi/6, k, j, ...
-                 zi/6, j, k, ...
-                 yi/6, k, j, ...
-                -xi/6, k, j, ...
-                -yi/6, j, k, ...
-                 xi/6, j, k, ...
-                vmin + feastol);
-            count = count + 1;
+            if (vmin > -inf)
+                con{count} = sprintf( ...
+                    ' c%d: %.15g x%d y%d + %.15g x%d y%d + %.15g x%d z%d + %.15g y%d z%d + %.15g x%d z%d + %.15g y%d z%d >= %.15g', ...
+                    count-1, ...
+                    -zi/6, k, j, ...
+                    zi/6, j, k, ...
+                    yi/6, k, j, ...
+                    -xi/6, k, j, ...
+                    -yi/6, j, k, ...
+                    xi/6, j, k, ...
+                    vmin + feastol);
+                count = count + 1;
+            end
             
             % constraint with upper bound
-            con{count} = sprintf( ...
-                ' c%d: %.15g x%d y%d + %.15g x%d y%d + %.15g x%d z%d + %.15g y%d z%d + %.15g x%d z%d + %.15g y%d z%d <= %.15g', ...
-                count-1, ...
-                -zi/6, k, j, ...
-                zi/6, j, k, ...
-                yi/6, k, j, ...
-                -xi/6, k, j, ...
-                -yi/6, j, k, ...
-                xi/6, j, k, ...
-                vmax - feastol);
-            count = count + 1;
+            if (vmax < inf)
+                con{count} = sprintf( ...
+                    ' c%d: %.15g x%d y%d + %.15g x%d y%d + %.15g x%d z%d + %.15g y%d z%d + %.15g x%d z%d + %.15g y%d z%d <= %.15g', ...
+                    count-1, ...
+                    -zi/6, k, j, ...
+                    zi/6, j, k, ...
+                    yi/6, k, j, ...
+                    -xi/6, k, j, ...
+                    -yi/6, j, k, ...
+                    xi/6, j, k, ...
+                    vmax - feastol);
+                count = count + 1;
+            end
             
         case 3 % three free vertices
             
@@ -307,30 +315,34 @@ for I = idxtricon
             k = triloc(3);   % index of free vertex in the mesh
             
             % constraint with lower bound
-            con{count} = sprintf( ...
-                ' c%d: %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d >= %.15g', ...
-                count-1, ...
-                -1/6, k, j, i, ...
-                 1/6, j, k, i, ...
-                 1/6, k, i, j, ...
-                -1/6, i, k, j, ...
-                -1/6, j, i, k, ...
-                 1/6, i, j, k, ...
-                vmin + feastol);
-            count = count + 1;
+            if (vmin > -inf)
+                con{count} = sprintf( ...
+                    ' c%d: %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d >= %.15g', ...
+                    count-1, ...
+                    -1/6, k, j, i, ...
+                    1/6, j, k, i, ...
+                    1/6, k, i, j, ...
+                    -1/6, i, k, j, ...
+                    -1/6, j, i, k, ...
+                    1/6, i, j, k, ...
+                    vmin + feastol);
+                count = count + 1;
+            end
             
             % constraint with upper bound
-            con{count} = sprintf( ...
-                ' c%d: %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d <= %.15g', ...
-                count-1, ...
-                -1/6, k, j, i, ...
-                 1/6, j, k, i, ...
-                 1/6, k, i, j, ...
-                -1/6, i, k, j, ...
-                -1/6, j, i, k, ...
-                 1/6, i, j, k, ...
-                vmax - feastol);
-            count = count + 1;
+            if (vmax > inf)
+                con{count} = sprintf( ...
+                    ' c%d: %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d + %.15g x%d y%d z%d <= %.15g', ...
+                    count-1, ...
+                    -1/6, k, j, i, ...
+                    1/6, j, k, i, ...
+                    1/6, k, i, j, ...
+                    -1/6, i, k, j, ...
+                    -1/6, j, i, k, ...
+                    1/6, i, j, k, ...
+                    vmax - feastol);
+                count = count + 1;
+            end
             
         otherwise
             
@@ -339,6 +351,9 @@ for I = idxtricon
     end
     
 end
+
+% remove empty cells not used for constraints
+con(count:end) = [];
 
 %% Radius constraints
 
